--- a/index.html
+++ b/index.html
@@ -12,32 +12,37 @@
     <button type="button" onclick="darkMode()" id="dark">Dark mode</button>
     <div class="main">
         <form action="">
-            <input type="text" id="screen" readonly maxlength="9" value="0">
+            <input type="text" id="screen" readonly value="0">
             <div class="mainDiv">
                 <button type="button" onclick="press(this)" style="background-color: #387ADF;">AC</button>
+                <button type="button" onclick="press(this)" style="background-color: #387ADF;">CE</button>
                 <button type="button" onclick="press(this)" style="background-color: #387ADF;">C</button>
                 <button type="button" onclick="press(this)" style="background-color: #f88000;">%</button>
                 <button type="button" onclick="press(this)" style="background-color: #f88000;">^</button>
             </div>
             <div class="mainDiv">
+                <button type="button" onclick="press(this)" style="background-color: #f88000;">√</button>
                 <button type="button" onclick="press(this)">1</button>
                 <button type="button" onclick="press(this)">2</button>
                 <button type="button" onclick="press(this)">3</button>
                 <button type="button" onclick="press(this)" style="background-color: #f88000;">+</button>
             </div>
             <div class="mainDiv">
+                <button type="button" onclick="press(this)" style="background-color: #f88000;font-style: italic;font-weight: 100;">n!</button>
                 <button type="button" onclick="press(this)">4</button>
                 <button type="button" onclick="press(this)">5</button>
                 <button type="button" onclick="press(this)">6</button>
                 <button type="button" onclick="press(this)" style="background-color: #f88000;">-</button>
             </div>
             <div class="mainDiv">
+                <button type="button" onclick="press(this)" style="background-color: #f88000;font-style: italic;font-weight: 100;">1/x</button>
                 <button type="button" onclick="press(this)">7</button>
                 <button type="button" onclick="press(this)">8</button>
                 <button type="button" onclick="press(this)">9</button>
                 <button type="button" onclick="press(this)" style="background-color: #f88000;">*</button>
             </div>
             <div class="mainDiv">
+                <button type="button" onclick="press(this)" style="background-color: #f88000;">π</button>
                 <button type="button" onclick="press(this)" style="background-color: #f88000;">/</button>
                 <button type="button" onclick="press(this)">0</button>
                 <button type="button" onclick="press(this)">.</button>
