Calculator small design change

--- a/index.html
+++ b/index.html
@@ -14,41 +14,54 @@
         <form action="">
             <input type="text" id="screen" readonly value="0">
             <div class="mainDiv">
-                <button type="button" onclick="press(this)" style="background-color: #f88000;" class="proVersion">sin</button>
-                <button type="button" onclick="press(this)" style="background-color: #f88000;" class="proVersion">^</button>
+                <button type="button" onclick="press(this)" style="background-color: #f88000;"
+                    class="proVersion">sin</button>
+                <button type="button" onclick="press(this)" style="background-color: #f88000;"
+                    class="proVersion">cos</button>
+                <button type="button" onclick="press(this)" style="background-color: #f88000;"
+                    class="proVersion">tan</button>
+                <button type="button" onclick="press(this)" style="background-color: #f88000;"
+                    class="proVersion">log</button>
+                <button type="button" onclick="press(this)" style="background-color: #f88000;"
+                    class="proVersion">exp</button>
+            </div>
+            <div class="mainDiv">
+                <button type="button" onclick="press(this)" style="background-color: #f88000;"
+                    class="proVersion">^</button>
                 <button type="button" onclick="press(this)" style="background-color: #387ADF;">AC</button>
                 <button type="button" onclick="press(this)" style="background-color: #387ADF;">C</button>
                 <button type="button" onclick="press(this)" style="background-color: #f88000;">%</button>
                 <button type="button" onclick="press(this)" style="background-color: #f88000;">/</button>
             </div>
             <div class="mainDiv">
-                <button type="button" onclick="press(this)" style="background-color: #f88000;" class="proVersion">cos</button>
-                <button type="button" onclick="press(this)" style="background-color: #f88000" class="proVersion">√</button>
+                <button type="button" onclick="press(this)" style="background-color: #f88000"
+                    class="proVersion">√</button>
                 <button type="button" onclick="press(this)">1</button>
                 <button type="button" onclick="press(this)">2</button>
                 <button type="button" onclick="press(this)">3</button>
                 <button type="button" onclick="press(this)" style="background-color: #f88000;">+</button>
             </div>
             <div class="mainDiv">
-                <button type="button" onclick="press(this)" style="background-color: #f88000;" class="proVersion">tan</button>
-                <button type="button" onclick="press(this)" style="background-color: #f88000;" class="proVersion">n!</button>
+                <button type="button" onclick="press(this)" style="background-color: #f88000;"
+                    class="proVersion">n!</button>
                 <button type="button" onclick="press(this)">4</button>
                 <button type="button" onclick="press(this)">5</button>
                 <button type="button" onclick="press(this)">6</button>
                 <button type="button" onclick="press(this)" style="background-color: #f88000;">-</button>
             </div>
             <div class="mainDiv">
-                <button type="button" onclick="press(this)" style="background-color: #f88000;" class="proVersion">log</button>
-                <button type="button" onclick="press(this)" style="background-color: #f88000;" class="proVersion">1/x</button>
+                <button type="button" onclick="press(this)" style="background-color: #f88000;"
+                    class="proVersion">1/x</button>
                 <button type="button" onclick="press(this)">7</button>
                 <button type="button" onclick="press(this)">8</button>
                 <button type="button" onclick="press(this)">9</button>
                 <button type="button" onclick="press(this)" style="background-color: #f88000;">*</button>
             </div>
             <div class="mainDiv">
-                <button type="button" onclick="press(this)" style="background-color: #f88000;" class="proVersion">exp</button>
-                <button type="button" onclick="press(this)" style="background-color: #f88000;" class="proVersion">π</button>
-                <button type="button"  style="background-color: #387ADF;" id="more"><i class="fa-solid fa-ellipsis"></i></button>
+                <button type="button" onclick="press(this)" style="background-color: #f88000;"
+                    class="proVersion">π</button>
+                <button type="button" style="background-color: #387ADF;" id="more"><i
+                        class="fa-solid fa-ellipsis"></i></button>
                 <button type="button" onclick="press(this)">0</button>
                 <button type="button" onclick="press(this)">.</button>
                 <button type="button" onclick="press(this)" style="background-color: #387ADF;">=</button>
